--- a/.env.buildAnal
+++ b/.env.buildAnal
@@ -1,7 +1,9 @@
-# 生产环境
-# aaa = 'kkk'
-# NODE_ENV = 'production'
+# 打包文件分析环境
 
+NODE_ENV = 'production'
+
+# build flag
+VUE_APP_BUILD_FLAG = 'anal'
 
 # base api
 VUE_APP_BASE_API = '/prod-api'
