--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Pan <panfree23@gmail.com>",
   "scripts": {
     "local": "vue-cli-service serve --mode local",
+    "de": "vue-cli-service serve",
     "dev": "vue-cli-service serve --mode dev",
     "lint": "eslint --ext .js,.vue src",
     "build:prod": "vue-cli-service build",
@@ -57,6 +58,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
     "connect": "3.6.6",
