添加gzip压缩、打包分析

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "de": "vue-cli-service serve",
     "dev": "vue-cli-service serve --mode dev",
     "lint": "eslint --ext .js,.vue src",
-    "build:prod": "vue-cli-service build",
+    "build": "vue-cli-service build",
     "buildAnal": "vue-cli-service build --mode buildAnal",
     "buildPro": "vue-cli-service build --mode buildPro",
     "build:stage": "vue-cli-service build --mode staging",
@@ -61,6 +61,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
+    "compression-webpack-plugin": "^6.1.1",
     "connect": "3.6.6",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
