--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,8 @@
 # 生产环境
-# aaa = 'kkk'
-# NODE_ENV = 'production'
 
+NODE_ENV = 'production'
+
+VUE_APP_BUILD_FLAG = 'production'
 
 # base api
 VUE_APP_BASE_API = '/prod-api'
